@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
    +{abstract} update():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # shootStrategy: ShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + increaseHp(int increase):void
    + getHp():int
    + setShootStrategy(ShootStrategy):void
    + {abstract} shoot():List<BaseBullet>
 }


class HeroAircraft {
    - {static} heroAircraft: HeroAircraft
    - shootNum:int
    - power:int
    - direction:int
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getHeroAircraft():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
    + update():void
}

AbstractAircraft <|-- HeroAircraft

abstract class AbstractEnemy {
    + AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + {abstract} generateProp() : List<BaseProp>
}

AbstractAircraft <|-- AbstractEnemy

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + generateProp() : List<BaseProp>
    + update(): void
}

AbstractEnemy <|-- MobEnemy

class EliteEnemy {
    - power:int
    - direction:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + generateProp() : List<BaseProp>
    + forward():void
    + update(): void
}

AbstractEnemy <|-- EliteEnemy

class ElitePlusEnemy {
    - power:int
    - direction:int
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + generateProp() : List<BaseProp>
    + forward():void
    + update(): void
}

AbstractEnemy <|-- ElitePlusEnemy

class BossEnemy {
    - power:int
    - direction:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + generateProp() : List<BaseProp>
    + forward():void
    + update(): void
}

AbstractEnemy <|-- BossEnemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
     + update(): void
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
     + update(): void
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

abstract class BaseProp {
    # {static} shootThread:Thread
    + BaseProp(int locationX, int locationY, int speedX, int speedY)
    + {abstract} active(): void
    + update():void
}

class PropBlood {
     - cure: int
     + PropBlood(int locationX, int locationY, int speedX, int speedY)
     + active(): void
}

class PropBomb {
    - enemyList:List<AbstractFlyingObject>
    + PropBomb(int locationX, int locationY, int speedX, int speedY)
    + addEnemy(AbstractFlyingObject enemy):void
    + removeEnemy(AbstractFlyingObject enemy):void
    + notifyAllEnemy():void
    + active():void
}

class PropBullet {
     + PropBullet(int locationX, int locationY, int speedX, int speedY)
     + active(): void
}

class PropBulletPlus {
     + PropBulletPlus(int locationX, int locationY, int speedX, int speedY)
     + active(): void
}

BaseProp <|-- PropBlood
BaseProp <|-- PropBomb
BaseProp <|-- PropBullet
BaseProp <|-- PropBulletPlus


AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseProp

@enduml